...
                                <segment title="Electronics"/>
                            </segments>
                            <connections>
                                <action selector="changedRecyclingType:" destination="BYZ-38-t0r" eventType="valueChanged" id="Bmg-R7-qz6"/>
                            </connections>
                        </segmentedControl>
                        <barButtonItem key="rightBarButtonItem" title="Item" image="list.bullet" catalog="system" id="sZ7-jl-QaI">
                            <connections>
                                <segue destination="YQs-Ut-Cfm" kind="show" identifier="ViewMapTable" id="od5-BB-xJy"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
                                            <rect key="frame" x="0.0" y="0.0" width="414" height="75"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="characterWrap" translatesAutoresizingMaskIntoConstraints="NO" id="djh-xb-McR">
                                                    <rect key="frame" x="20" y="10" width="374" height="55"/>
                                                    <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                    <state key="normal" title="Directions">
                                                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    </state>
                                                    <connections>
                                                        <action selector="NavigateButtonPressed:" destination="dn0-vY-Adt" eventType="touchUpInside" id="q62-54-SPT"/>
                                                    </connections>
                                                </button>
...
                                        <rect key="frame" x="20" y="660" width="374" height="43.5"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="tol-in-aLa" id="CHy-vK-zAL">
                                            <rect key="frame" x="0.0" y="0.0" width="330" height="43.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Green" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ixD-qe-73O">
                                                    <rect key="frame" x="20" y="11.5" width="302" height="21"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                            </subviews>
...
                        </sections>
                        <connections>
                            <outlet property="dataSource" destination="xyM-i8-sA5" id="8Qo-RY-Fhi"/>
                            <outlet property="delegate" destination="xyM-i8-sA5" id="V6q-44-xFg"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Notifications" id="gg1-Sj-kaK">
                        <barButtonItem key="rightBarButtonItem" style="done" systemItem="done" id="4RT-Yr-TUp">
                            <connections>
                                <segue destination="bPy-pL-GZQ" kind="unwind" identifier="doneSegue" unwindAction="rewindToBinTableWithSegue:" id="6VZ-gi-d3l"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
            <point key="canvasLocation" x="2672" y="-545"/>
        </scene>
        <!--Recycling Centres-->
        <scene sceneID="qKq-Kj-P37">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="BW6-J5-kFJ" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Recycling Centres" image="recycle" selectedImage="recycle" id="DQH-PB-s5V"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="knf-Kf-7nl">
                        <rect key="frame" x="0.0" y="48" width="414" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <navigationBarAppearance key="scrollEdgeAppearance"/>
                    </navigationBar>
...
